--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpe8iPZt6" once="menu" id="menu2-5p" data-rv-view="340">
+<section class="menu cid-qtpe8iPZt6" once="menu" id="menu2-5p" data-rv-view="769">
 
     
 
@@ -60,8 +60,7 @@
                         Building Hosts</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="information.html">
-                        information</a>
+                    <a class="nav-link link text-black display-4" href="information.html">Information</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -71,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-section info3 cid-qsEgTUeUCM" id="info3-1f" data-rv-view="337">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section info3 cid-qsEgTUeUCM" id="info3-1f" data-rv-view="766">
 
     
 
