--- a/missions.html
+++ b/missions.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="363">
+<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="792">
 
     
 
@@ -60,8 +60,7 @@
                         Building Hosts</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="information.html">
-                        information</a>
+                    <a class="nav-link link text-black display-4" href="information.html">Information</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -71,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="360">
+<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="789">
 
     
 
