--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="408">
+<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="837">
 
     
 
@@ -60,8 +60,7 @@
                         Building Hosts</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
                         Media</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="information.html">
-                        information</a>
+                    <a class="nav-link link text-black display-4" href="information.html">Information</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
@@ -71,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="407">
+<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="836">
      
 
     <div class="container">
