create github pages

--- a/smallgroups.html
+++ b/smallgroups.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="1122">
+<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="1292">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="1119">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="1289">
 
     
 
