--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpe8iPZt6" once="menu" id="menu2-5p" data-rv-view="1959">
+<section class="menu cid-qtpe8iPZt6" once="menu" id="menu2-5p" data-rv-view="2342">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section info3 cid-qsEgTUeUCM" id="info3-1f" data-rv-view="1956">
+<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section info3 cid-qsEgTUeUCM" id="info3-1f" data-rv-view="2339">
 
     
 
@@ -84,18 +84,6 @@
             <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-7" href="file:///C:/Users/Mike/OneDrive/Email%20attachments/July%202017%20Newsletter.pdf" target="_blank">September 2017</a>
                 <a class="btn btn-primary display-7" href="file:///C:/Users/Mike/Documents/August%202017%20Newsletter.pdf">August 2017</a> <a class="btn btn-primary display-7" href="file:///C:/Users/Mike/Documents/July%202017%20Newsletter.pdf" target="_blank">July 2017</a></div>
         </div>
-    </div>
-</section>
-
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="soundcloud2-21" data-rv-view="168">
-    <!-- Gallery -->
-    <div class="mbr-section__container mbr-gallery-layout-article container">
-        <div class=" col-sm-8 col-sm-offset-2">
-            <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
-                <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F234652184&amp;amp;auto_play=false&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
-            </figure>
-        </div>
-        <div class="clearfix"></div>
     </div>
 </section>
 
