create github pages

--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpe8iPZt6" once="menu" id="menu2-5p" data-rv-view="2342">
+<section class="menu cid-qtpe8iPZt6" once="menu" id="menu2-5p" data-rv-view="3417">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section info3 cid-qsEgTUeUCM" id="info3-1f" data-rv-view="2339">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section info3 cid-qsEgTUeUCM" id="info3-1f" data-rv-view="3414">
 
     
 
