--- a/missions.html
+++ b/missions.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="2365">
+<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="3440">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web site creator</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="2362">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="3437">
 
     
 
@@ -137,7 +137,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="page21.html" class="btn btn-primary display-4">
+                        <div class="mbr-section-btn text-center"><a href="missionsgivingcalendar.html" class="btn btn-primary display-4">
                                 Learn More
                             </a></div>
                         <img src="assets/images/01.jpg" alt="Mobirise" media-simple="true">
