--- a/missions.html
+++ b/missions.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="3440">
+<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="1099">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="3437">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="1096">
 
     
 
@@ -140,7 +140,7 @@
                         <div class="mbr-section-btn text-center"><a href="missionsgivingcalendar.html" class="btn btn-primary display-4">
                                 Learn More
                             </a></div>
-                        <img src="assets/images/01.jpg" alt="Mobirise" media-simple="true">
+                        <img src="assets/images/mbr-1620x1080.jpg" alt="Mobirise" title="" media-simple="true">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Missions Giving Calendar</h4>
