create github pages

--- a/smallgroups.html
+++ b/smallgroups.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="1232">
+<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="1407">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web builder</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="1229">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="1404">
 
     
 
