--- a/resources.html
+++ b/resources.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="1462">
+<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="1632">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="1461">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="1631">
      
 
     <div class="container">
