create github pages

--- a/resources.html
+++ b/resources.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="2487">
+<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="2657">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="2486">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="2656">
      
 
     <div class="container">
