--- a/smallgroups.html
+++ b/smallgroups.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="2602">
+<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="2772">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="2599">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="2769">
 
     
 
