--- a/smallgroups.html
+++ b/smallgroups.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="4132">
+<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="4642">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">how to build your own website</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="4129">
+<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="4639">
 
     
 
