--- a/missions.html
+++ b/missions.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="549">
+<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="431">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="546">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="428">
 
     
 
